fix alignment between logo and env label in header

--- a/src/web/components/PortalHeader/PortalHeader.scss
+++ b/src/web/components/PortalHeader/PortalHeader.scss
@@ -7,6 +7,7 @@
 
   .uid2-logo {
     height: 30px;
+    display: block;
   }
 
   .title {
@@ -26,7 +27,6 @@
         border-radius: 4px;
         background-color: #e0e0e0;
         color: #333;
-        margin-bottom: 5px;
         margin-left: 5px;
 
         &::before {
